Fixing Error in Player-1

--- a/main.html
+++ b/main.html
@@ -130,7 +130,7 @@
 				<img src="./images/Udit Goenka 10 Sep Square Post.png" alt="song">
 			</label>
 		</div>
-		<div class="player">
+		<div class="player" style="position: absolute;">
 			<div class="upper-part">
 				<div class="info-area" id="test">
 					<label class="song-info" id="song-info-1">
