Fixing Error in Player-2

--- a/main.html
+++ b/main.html
@@ -134,7 +134,7 @@
 			<div class="upper-part">
 				<div class="info-area" id="test">
 					<label class="song-info" id="song-info-1">
-						<div class="title">Prasad Lendwe</div>
+						<div class="title">Ps Ledwe</div>
 						<div class="sub-line">
 							<div class="subtitle">Founder - Convey by FinnovationZ</div>
 						</div>
