Fixing Error in Player-4

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<div class="nav-bg"></div>
-	<div class="logo"> <img src="images/psf_23.png" alt=""></div>
+	<div class="logo-nav"> <img src="images/psf_23.png" alt=""></div>
 	<input type="checkbox" id="burger-toggle">
 	<label for="burger-toggle" class="burger-menu">
 		<div class="line"></div>
